tests/rascal/negative/type_errors/L1/18_expression_ES10_D4_65.ob
MODULE Test18;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               z := 1223;
               x := ((((z DIV 2) DIV (+ x)) MOD ((2 * z) DIV x)) - y);
               q := (0 <= 2);
               x := 0;
               y := (+ (1223 - 1223));
               y := (((+ (200 + 1223)) MOD ((y * y) DIV (y DIV 200))) + (1223 - y));
               z := z;
  (* error *)  x := 1223;
               y := z;
               p := ((x DIV 1) < x)
END Test18.